--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //en campos "Server,DataBase,password" completar con los valores que se encuentren seteados en la pc que carguen el proyecto//
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=JOSE-SONY-VAIO ; DataBase=CFI-Track3-Squad2-Backend ; User Id=sa ; password=15488036vv ; TrustServerCertificate= true; "
+  },
   "AllowedHosts": "*"
 }
